--- a/make.conf
+++ b/make.conf
@@ -23,6 +23,6 @@ SANE_BACKENDS="net pixma"
 
 # System
 USE="alsa bash-completion caps dbus encode icu idn -nls opencl policykit -sendmail udev unicode"
-USE="${USE} aac flac id3tag mad mp3 mp4 mpeg ogg opus pulseaudio sound theora vorbis x264 x265 xml"
+USE="${USE} aac alsa flac id3tag mad mp3 mp4 mpeg ogg opus sound theora vorbis x264 x265 xml"
 USE="${USE} -X -gui -gnome -gtk -cairo -pango -kde -kwallet -plasma -qt5 -qml -sdl -xcb"
-USE="${USE} -branding -doc -examples -test -handbook -telemetry"
+USE="${USE} -branding -doc -examples -handbook -jack -pulseaudio -test -telemetry"
