--- a/make.conf
+++ b/make.conf
@@ -18,11 +18,15 @@ EMERGE_DEFAULT_OPTS="--with-bdeps=y --keep-going=y --quiet-build=y"
 GENTOO_MIRRORS="https://mirror.yandex.ru/gentoo-distfiles/"
 VIDEO_CARDS="fbdev amdgpu"
 INPUT_DEVICES="libinput synaptics wacom"
+LLVM_TARGETS="X86 AMDGPU SPIRV"
 LUA_SINGLE_TARGET="luajit"
 SANE_BACKENDS="net pixma"
 
 # System
-USE="alsa bash-completion caps dbus encode icu idn -nls opencl policykit -sendmail udev unicode"
-USE="${USE} aac alsa flac id3tag mad mp3 mp4 mpeg ogg opus sound theora vorbis x264 x265 xml"
+USE="bash-completion caps dbus encode icu idn -nls opencl policykit -sendmail udev unicode"
+USE="${USE} aac flac id3tag mad mp3 mp4 mpeg ogg opus sound theora vorbis x264 x265 xml"
 USE="${USE} -X -gui -gnome -gtk -cairo -pango -kde -kwallet -plasma -qt5 -qml -sdl -xcb"
-USE="${USE} -branding -doc -examples -handbook -jack -pulseaudio -test -telemetry"
+USE="${USE} -branding -doc -examples -handbook -opencl -test -telemetry"
+
+# Desktop
+USE="${USE} alsa -ao -jack -oss -pulseaudio -sndio"
