--- a/make.conf
+++ b/make.conf
@@ -3,6 +3,9 @@ CFLAGS="-march=znver3 -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 FCFLAGS="${CFLAGS}"
 FFLAGS="${CFLAGS}"
+
+# Build Options
+CARGO_BUILD_JOBS=17
 MAKEOPTS="-j17"
 
 # Locale
@@ -16,17 +19,13 @@ ACCEPT_LICENSE="* -@EULA"
 CONFIG_PROTECT="/var/bind"
 EMERGE_DEFAULT_OPTS="--with-bdeps=y --keep-going=y --quiet-build=y"
 GENTOO_MIRRORS="https://mirror.yandex.ru/gentoo-distfiles/"
-VIDEO_CARDS="fbdev amdgpu"
+VIDEO_CARDS="fbdev amdgpu radeon radeonsi"
 INPUT_DEVICES="libinput synaptics wacom"
 LLVM_TARGETS="X86 AMDGPU SPIRV"
 LUA_SINGLE_TARGET="luajit"
 SANE_BACKENDS="net pixma"
 
 # System
-USE="bash-completion caps dbus encode icu idn -nls opencl policykit -sendmail udev unicode"
-USE="${USE} aac flac id3tag mad mp3 mp4 mpeg ogg opus sound theora vorbis x264 x265 xml"
-USE="${USE} -X -gui -gnome -gtk -cairo -pango -kde -kwallet -plasma -qt5 -qml -sdl -xcb"
+USE="bash-completion caps dbus icu idn llvm -nls policykit -sendmail udev unicode xml"
+USE="${USE} -X -gui -gnome -gtk -cairo -pango -kde -kwallet -plasma -qt5 -qt6 -qml -sdl -xcb"
 USE="${USE} -branding -doc -examples -handbook -opencl -test -telemetry"
-
-# Desktop
-USE="${USE} alsa -ao -jack -oss -pulseaudio -sndio"
