fixed dracut config

--- a/etc/dracut.conf
+++ b/etc/dracut.conf
@@ -1,3 +1,5 @@
+hostonly="yes"
+hostonly_cmdline="no"
+kernel_cmdline="root=zfs:system/root rootfstype=zfs rootflags=rw,noatime,xattr,noacl,casesensitive"
 early_microcode="no"
 compress="zstd"
-hostonly="yes"
