--- a/etc/dracut.conf
+++ b/etc/dracut.conf
@@ -1,5 +1,5 @@
 hostonly="yes"
-hostonly_cmdline="no"
-kernel_cmdline="root=zfs:system/root rootfstype=zfs rootflags=rw,noatime,xattr,noacl,casesensitive"
+hostonly_cmdline="yes"
+omit_dracutmodules+=" bluetooth crypt nfs overlayfs squash-lib "
 early_microcode="no"
 compress="zstd"
