--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -19,7 +19,7 @@ ACCEPT_LICENSE="* -@EULA"
 CONFIG_PROTECT="/var/bind"
 EMERGE_DEFAULT_OPTS="--with-bdeps=y --keep-going=y --quiet-build=y"
 GENTOO_MIRRORS="https://mirror.yandex.ru/gentoo-distfiles/"
-VIDEO_CARDS="fbdev amdgpu radeon radeonsi lavapipe vmware"
+VIDEO_CARDS="fbdev amdgpu radeon radeonsi"
 INPUT_DEVICES="libinput synaptics wacom"
 
 # System
