--- a/etc/helix/config.toml
+++ b/etc/helix/config.toml
@@ -73,23 +73,23 @@ tabpad = "·"
 ins = "insert_mode"
 esc = [ "collapse_selection", "keep_primary_selection" ]
 
-p = "paste_clipboard_after"
-P = "paste_clipboard_before"
+#p = "paste_clipboard_after"
+#P = "paste_clipboard_before"
 #y = "yank_to_clipboard"
 #Y = "yank_joined_to_clipboard"
-R = "replace_selections_with_clipboard"
+#R = "replace_selections_with_clipboard"
 #d = [ "yank_to_clipboard", "delete_selection_noyank" ]
 
-#p = "paste_primary_clipboard_after"
-#P = "paste_primary_clipboard_before"
-#y = "yank_to_primary_clipboard"
-#Y = "yank_joined_to_primary_clipboard"
-#R = "replace_selections_with_primary_clipboard"
-#d = [ "yank_to_primary_clipboard", "delete_selection_noyank" ]
+#y = [ "yank_to_clipboard", "yank_to_primary_clipboard" ]
+#Y = [ "yank_joined_to_clipboard", "yank_joined_to_primary_clipboard" ]
+#d = [ "yank_to_clipboard", "yank_to_primary_clipboard", "delete_selection_noyank" ]
 
-y = [ "yank_to_clipboard", "yank_to_primary_clipboard" ]
-Y = [ "yank_joined_to_clipboard", "yank_joined_to_primary_clipboard" ]
-d = [ "yank_to_clipboard", "yank_to_primary_clipboard", "delete_selection_noyank" ]
+p = "paste_primary_clipboard_after"
+P = "paste_primary_clipboard_before"
+y = "yank_to_primary_clipboard"
+Y = "yank_joined_to_primary_clipboard"
+R = "replace_selections_with_primary_clipboard"
+d = [ "yank_to_primary_clipboard", "delete_selection_noyank" ]
 
 A-left = ":buffer-previous"
 A-right = ":buffer-next"
@@ -97,27 +97,27 @@ A-right = ":buffer-next"
 [keys.insert]
 ins = "normal_mode"
 
-C-v = "paste_clipboard_before"
-#C-v = "paste_primary_clipboard_before"
+#C-v = "paste_clipboard_before"
+C-v = "paste_primary_clipboard_before"
 
 A-left = ":buffer-previous"
 A-right = ":buffer-next"
 
 [keys.select]
-p = "paste_clipboard_after"
-P = "paste_clipboard_before"
+#p = "paste_clipboard_after"
+#P = "paste_clipboard_before"
 #y = "yank_to_clipboard"
 #Y = "yank_joined_to_clipboard"
-R = "replace_selections_with_clipboard"
+#R = "replace_selections_with_clipboard"
 #d = [ "yank_to_clipboard", "delete_selection_noyank" ]
 
-#p = "paste_primary_clipboard_after"
-#P = "paste_primary_clipboard_before"
-#y = "yank_to_primary_clipboard"
-#Y = "yank_joined_to_primary_clipboard"
-#R = "replace_selections_with_primary_clipboard"
-#d = [ "yank_to_primary_clipboard", "delete_selection_noyank" ]
+#y = [ "yank_to_clipboard", "yank_to_primary_clipboard" ]
+#Y = [ "yank_joined_to_clipboard", "yank_joined_to_primary_clipboard" ]
+#d = [ "yank_to_clipboard", "yank_to_primary_clipboard", "delete_selection_noyank" ]
 
-y = [ "yank_to_clipboard", "yank_to_primary_clipboard" ]
-Y = [ "yank_joined_to_clipboard", "yank_joined_to_primary_clipboard" ]
-d = [ "yank_to_clipboard", "yank_to_primary_clipboard", "delete_selection_noyank" ]
+p = "paste_primary_clipboard_after"
+P = "paste_primary_clipboard_before"
+y = "yank_to_primary_clipboard"
+Y = "yank_joined_to_primary_clipboard"
+R = "replace_selections_with_primary_clipboard"
+d = [ "yank_to_primary_clipboard", "delete_selection_noyank" ]
