--- a/etc/dracut.conf
+++ b/etc/dracut.conf
@@ -1,5 +1,5 @@
 hostonly="yes"
 hostonly_cmdline="yes"
-omit_dracutmodules+=" bluetooth crypt nfs overlayfs squash-lib "
+omit_dracutmodules+=" bluetooth crypt nfs overlayfs resume squash-lib "
 early_microcode="no"
 compress="zstd"
